--- a/app/client/public/index.html
+++ b/app/client/public/index.html
@@ -24,7 +24,7 @@
 </style>
 
 <!-- Disable reloading using CTRL+R -->
-<script>
+<!-- <script>
 document.onkeydown = (e) => {
   let keycode = e.which;
   if (window.event) keycode = window.event.keyCode;
@@ -36,4 +36,4 @@ document.onkeydown = (e) => {
   }
 }
 
-</script>
+</script> -->
